<?xml version="1.0"?>
<package format = "2">
  <name>can_interface</name>
  <version>1.0.0</version>
  <description>A CANBus interface using sockets</description>

  <maintainer email="rgoulartns@gmail.com">Rafael Goulart</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
